--- a/2_code/2_experiment/21_setup_sfincs_models.ipynb
+++ b/2_code/2_experiment/21_setup_sfincs_models.ipynb
@@ -61,13 +61,15 @@
     "# update base model river bathymetry\n",
     "base_root = join(model_root, \"00_base_100m\")\n",
     "runs = [\n",
-    "    (1, {'rivdph_method': 'powlaw'}),\n",
-    "    (2, {'rivdph_method': 'manning'}),\n",
-    "    (3, {'rivdph_method': 'gvf'}),\n",
-    "    (4, {'rivdph_method': 'powlaw', 'hp': 0.4}),\n",
-    "    (5, {'rivdph_method': 'powlaw', 'hp': 0.5}),\n",
-    "    (7, {'rivdph_method': 'gvf', 'rivbank': False}),\n",
-    "    (8, {'rivdph_method': 'powlaw', 'river_upa': 25}),\n",
+    "    (1, {'rivdph_method': 'powlaw'}, {}),\n",
+    "    (2, {'rivdph_method': 'manning'}, {}),\n",
+    "    (3, {'rivdph_method': 'gvf'}, {}),\n",
+    "    (4, {'rivdph_method': 'powlaw', 'hp': 0.25}, {}),\n",
+    "    (5, {'rivdph_method': 'powlaw', 'hp': 0.35}, {}),\n",
+    "    (6, {'rivdph_method': 'powlaw', 'hc': 0.50}, {}),\n",
+    "    (7, {'rivdph_method': 'gvf', 'rivbank': False}, {}),\n",
+    "    (8, {'rivdph_method': 'powlaw', 'river_upa': 25}, {}),\n",
+    "    (9, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.05}),\n",
     "]\n",
     "# base_root = join(model_root, \"10_base_50m\")\n",
     "# runs = [\n",
@@ -76,15 +78,19 @@
     "#     (13, {'rivdph_method': 'gvf'}),\n",
     "#     (18, {'rivdph_method': 'powlaw', 'river_upa': 25}),\n",
     "# ]\n",
-    "for i, kwargs in runs:\n",
+    "for i, kwargs, kwargs1 in runs:\n",
+    "    opt = configread(f'update_rivbathy.ini', abs_path=True)\n",
     "    postfix = '_'.join([f'{k[:3]}{v}' for k,v in kwargs.items()])\n",
     "    root = join(model_root, f'{i:02d}_{postfix}')\n",
+    "    if kwargs1:\n",
+    "        postfix1 = '_'.join([f'{k[:3]}{v}' for k,v in kwargs1.items()])\n",
+    "        root = f'{root}_{postfix1}'\n",
     "    if isdir(root):\n",
     "        continue\n",
     "    mod1 = SfincsModel(base_root, mode='r', data_libs=data_libs, logger=logger)\n",
     "    # update bathymetry with specific settings\n",
-    "    opt = configread(f'update_rivbathy.ini', abs_path=True)\n",
     "    opt['setup_river_bathymetry'].update(kwargs)\n",
+    "    opt['setup_manning_roughness'].update(kwargs1)\n",
     "    mod1.update(model_out=root, opt=opt, write=False)\n",
     "    # set zs ini restart file\n",
     "    mask = np.logical_or(mod1.staticmaps['rivmsk']==1, mod1.staticmaps['dep']<0)\n",
@@ -104,26 +110,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.copytree(join(model_root, '01_rivpowlaw'), join(model_root, '01_rivpowlaw_glofas'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# write forcing\n",
     "runs = [r for r in glob.glob(f'../../3_models/SFINCS/*') if not isfile(r)]\n",
     "for root0 in runs:\n",
     "    # update forcing in subfolders\n",
-    "    for event in ['idai', 'eloise']:\n",
+    "    for event in ['idai', 'eloise', 'idai_glofas', 'eloise_glofas']:\n",
     "        root = join(root0, event)\n",
     "        if isdir(root):\n",
     "            continue\n",
     "        mod1 = SfincsModel(root0, mode='r', data_libs=data_libs, logger=logger)\n",
     "        opt = configread(f'update_sfincs_{event}.ini', abs_path=True)\n",
-    "        if 'glofas' in basename(root0):\n",
+    "        # glofas forcing only with default 01_ run\n",
+    "        if 'glofas' in basename(event):\n",
+    "            if not basename(root0).startswith('01'): continue\n",
     "            opt['setup_q_forcing_from_grid'].update({\n",
     "                'discharge_fn': 'glofas_era5', 'uparea_fn': 'glofas_uparea'\n",
     "            })\n",
@@ -151,7 +150,6 @@
     "for event in ['idai', 'eloise']:\n",
     "    mod = SfincsModel(join(base_root, event), mode='r', data_libs=data_libs)\n",
     "    config = mod.config.copy()\n",
-    "    config.update({'alpha': 0.7})\n",
     "    tref = config['tref']\n",
     "\n",
     "    # get htide\n",
@@ -165,6 +163,11 @@
     "\n",
     "    # get discharge climatology\n",
     "    da_dis = mod.forcing['dis'].copy()\n",
+    "    # mod.setup_q_forcing_from_grid(\n",
+    "    #     discharge_fn = 'glofas_era5',\n",
+    "    #     uparea_fn = 'glofas_uparea',   \n",
+    "    # )\n",
+    "    # da_dis_glofas = mod.forcing['dis'].copy()\n",
     "    mod.setup_config(\n",
     "        tstart = '19800101 000000',\n",
     "        tend = '20200101 000000',\n",
@@ -198,14 +201,15 @@
     "        'h': ['disclim', 'htot', 'noprecip'],\n",
     "        'p': ['disclim', 'htide', 'precip'],\n",
     "        'base': ['disclim', 'htide', 'noprecip'],\n",
+    "        'qh': ['dis', 'htot', 'noprecip'],\n",
     "        }\n",
     "    for run, (q, h, p) in cmpd_runs.items():\n",
-    "        print(f'{event}_{run}')\n",
     "        root = join(base_root, f'{event}_{run}')\n",
     "        if not os.path.isdir(root):\n",
     "            os.makedirs(root)\n",
-    "        # else:\n",
-    "        #     continue\n",
+    "        else:\n",
+    "            continue\n",
+    "        print(f'{event}_{run}')\n",
     "\n",
     "        shutil.copyfile(join(base_root, event, 'sfincs.src'), join(root, 'sfincs.src'))\n",
     "        write_timeseries(join(root, 'sfincs.dis'), qs[q], tref)\n",
@@ -235,27 +239,24 @@
    "outputs": [],
    "source": [
     "# run models\n",
-    "keys = [''] + [f'_{k}' for k in cmpd_runs.keys()]\n",
-    "runs = [r for r in glob.glob(f'../../3_models/SFINCS/*') if (not isfile(r) and not basename(r).startswith('1'))]\n",
-    "print(len(runs))\n",
-    "for key in keys:\n",
-    "    for root0 in runs:\n",
-    "        for event in ['idai', 'eloise']:\n",
-    "            root = join(root0, f'{event}{key}')\n",
-    "            if isfile(join(root, 'sfincs_map.nc')) or not isdir(root):\n",
-    "                continue\n",
-    "            print(basename(root0), f'{event}{key}')\n",
-    "            with open(join(root, \"sfincs.log\"), 'w') as f:\n",
-    "                p = subprocess.Popen([fn_exe], stdout=f, cwd=root)\n",
-    "                %time p.wait()"
+    "from os.path import dirname\n",
+    "\n",
+    "def check_finished(root):\n",
+    "    finished = False\n",
+    "    if isfile(join(root, 'sfincs.log')):\n",
+    "        with open(join(root, 'sfincs.log'), 'r') as f:\n",
+    "            finished = np.any(['Simulation is finished' in l for l in f.readlines()])\n",
+    "    return finished\n",
+    "\n",
+    "runs = [dirname(fn) for fn in glob.glob(join(model_root, '*', '*', 'sfincs.inp')) if not check_finished(dirname(fn))]\n",
+    "n = len(runs)\n",
+    "print(n)\n",
+    "for i, root in enumerate(runs):\n",
+    "    print(f'{i+1:d}/{n:d}: {root}')\n",
+    "    with open(join(root, \"sfincs.log\"), 'w') as f:\n",
+    "        p = subprocess.Popen([fn_exe], stdout=f, cwd=root)\n",
+    "        %time p.wait()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
