--- a/2_code/3_postprocess/32_postprocess_simulations.ipynb
+++ b/2_code/3_postprocess/32_postprocess_simulations.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from hydromt_sfincs import SfincsModel\n",
-    "from os.path import join, isfile, basename, isdir\n",
+    "from os.path import join, isfile, basename, isdir, dirname\n",
     "import xarray as xr\n",
     "import numpy as np\n",
     "import glob\n",
@@ -21,8 +21,16 @@
    "outputs": [],
    "source": [
     "events = {'idai': '20190320', 'eloise':'20210125'}\n",
-    "root = r'../../3_models/SFINCS'\n",
-    "mod0 = SfincsModel(join(root, '00_base_100m'), mode='r')"
+    "tslice_max = {'idai': ('20190314', '20190322'), 'eloise':('20210119', '20210128')}\n",
+    "root0 = r'../../3_models/SFINCS'\n",
+    "mod0 = SfincsModel(join(root0, '00_base_100m'), mode='r')\n",
+    "\n",
+    "def check_finished(root):\n",
+    "    finished = False\n",
+    "    if isfile(join(root, 'sfincs.log')):\n",
+    "        with open(join(root, 'sfincs.log'), 'r') as f:\n",
+    "            finished = np.any(['Simulation is finished' in l for l in f.readlines()])\n",
+    "    return finished"
    ]
   },
   {
@@ -32,33 +40,48 @@
    "outputs": [],
    "source": [
     "# read and combine SFINCS outputs\n",
-    "postfix = '_50m'\n",
-    "runs = [path for path in glob.glob(join(root, '*')) if not isfile(path) and basename(path).startswith('1')]\n",
-    "mod0 = SfincsModel(runs[0], mode='r')\n",
-    "print(runs)\n",
+    "postfix, i = '_100m', 0\n",
+    "runs = glob.glob(join(root0, '*/*/','sfincs_map.nc'))\n",
+    "encoding = {'flddph': {'zlib': True}}\n",
     "\n",
+    "# mod0 = SfincsModel(runs[0], mode='r')\n",
+    "# print(runs)\n",
+    "\n",
+    "cmpd_runs = ['q', 'h', 'p', 'base'] # ['qh']\n",
+    "keys = [''] + [f'_{k}' for k in cmpd_runs]\n",
     "for event, date in events.items():\n",
-    "    da_lst, names = [], []\n",
+    "    runs = glob.glob(join(root0, '*', f'{event}*', 'sfincs_map.nc'))\n",
+    "    print(event)\n",
+    "    da_lst, da_lst1, names = [], [], []\n",
     "    for run in runs:\n",
-    "        if not isfile(join(run, event, 'sfincs_map.nc')):\n",
+    "        root = dirname(run)\n",
+    "        if not basename(dirname(root)).startswith(str(i)): continue\n",
+    "        if not check_finished(root): \n",
+    "            print(f'{root} NOT FINISHED / FAILED')\n",
     "            continue\n",
-    "        mod = SfincsModel(join(run, event), mode='r')\n",
-    "        print(run, event)\n",
+    "        mod = SfincsModel(root, mode='r')\n",
+    "        key = basename(root).strip(f'{event}')\n",
+    "        name = f'{basename(dirname(root))}{key}'\n",
+    "        print(name)\n",
     "        mod.read_results()\n",
-    "        hmax = np.maximum(0, mod.results['zsmax'] - mod.results['zb']).sel(timemax=date)\n",
+    "        hmax = np.maximum(0, mod.results['zsmax'] - mod.results['zb'])\n",
     "        hmax = hmax.fillna(0).where(mod.results['zb'].notnull(),-9999)\n",
     "        hmax.raster.set_nodata(-9999)\n",
     "        # hmax = hmax.raster.reproject_like(mod0.staticmaps, 'min')\n",
     "        # save geotif\n",
     "        # hmax.raster.flipud().raster.to_raster(join(mod.root, 'gis', 'hmax.tif'), compress='lzw')\n",
     "        # append to list\n",
-    "        da_lst.append(hmax.rename('flddph'))\n",
-    "        names.append(basename(run))\n",
+    "        da_lst.append(hmax.sel(timemax=date).rename('flddph'))\n",
+    "        da_lst1.append(hmax.sel(timemax=slice(*tslice_max[event])).max('timemax').rename('flddph'))\n",
+    "        names.append(name)\n",
     "    # save combined output to nc\n",
     "    da = xr.concat(da_lst, dim='run')\n",
     "    da['run'] = xr.IndexVariable('run', names)\n",
-    "    encoding = {'flddph': {'zlib': True}}\n",
-    "    da.to_netcdf(join(root, f'flddph_{event}{postfix}.nc'))\n",
+    "    da.to_netcdf(join(root0, f'flddph_{event}{postfix}.nc'), encoding=encoding)\n",
+    "    # save combined output to nc\n",
+    "    da = xr.concat(da_lst1, dim='run')\n",
+    "    da['run'] = xr.IndexVariable('run', names)\n",
+    "    da.to_netcdf(join(root0, f'flddph_{event}{postfix}_max.nc'), encoding=encoding)\n",
     "    # break\n"
    ]
   },
@@ -70,6 +93,7 @@
    "source": [
     "# read and combine CMF outputs\n",
     "root = r'../../3_models/CMF'\n",
+    "encoding = {'flddph': {'zlib': True}}\n",
     "\n",
     "for event, date in events.items():\n",
     "    da_lst, names = [], []\n",
@@ -85,16 +109,8 @@
     "    print(names)\n",
     "    da = xr.concat(da_lst, dim='run')\n",
     "    da['run'] = xr.IndexVariable('run', names)\n",
-    "    encoding = {'flddph': {'zlib': True}}\n",
-    "    da.to_netcdf(join(root, f'flddph_{event}.nc'))"
+    "    da.to_netcdf(join(root, f'flddph_{event}.nc'), encoding=encoding)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
