--- a/2_code/4_analyze_plot/41_plot_models.ipynb
+++ b/2_code/4_analyze_plot/41_plot_models.ipynb
@@ -40,9 +40,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod = SfincsModel(r'../../3_models/SFINCS/01_riv_powlaw_idai', mode='r')\n",
+    "mod = SfincsModel(r'../../3_models/SFINCS/01_rivpowlaw/idai', mode='r')\n",
     "ds_sfx = mod.staticmaps\n",
-    "gdf_points = mod.staticgeoms['obs']"
+    "gdf_points = mod.staticgeoms['obs']\n",
+    "\n",
+    "dep_mask = ds_sfx['dep']==-9999\n",
+    "riv_mask = hydromt.open_raster(join(mod.root, '../gis', 'rivmsk.tif'))\n",
+    "riv_mask.raster.set_nodata(0)\n",
+    "gdf_riv = riv_mask.where(~dep_mask, 0).raster.vectorize()"
    ]
   },
   {
@@ -66,11 +71,12 @@
     "#towns\n",
     "df = pd.DataFrame({\n",
     "    'Mefambisse': (-19.53935304519779, 34.629741259143714),\n",
-    "    'Buzi Village': (-19.883677, 34.599003),        \n",
+    "    'Buzi': (-19.883677, 34.599003),        \n",
     "    'Beira': (-19.825007644673512, 34.86483377443984),    \n",
     "}).T\n",
     "df.columns = ['y', 'x']\n",
     "gdf = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df['x'], df['y']), crs=4326).to_crs(mod.crs)\n",
+    "gdf.to_file(r'../../1_data/towns.geojson', driver='GeoJSON')\n",
     "gdf.head()"
    ]
   },
@@ -93,11 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmf_root = r'../../3_models/CMF/sofala_06min/gis/'\n",
+    "cmf_root = r'../../3_models/CMF/03min/gis/'\n",
     "ds_cmf = hydromt.open_mfraster(join(cmf_root, r'*.tif'))\n",
     "ds_cmf.raster.set_crs(4326)\n",
     "gdf_gtsm = gpd.read_file(join(cmf_root, 'gtsm.geojson'))\n",
-    "basins = [1,2, 26, 31, 10, 42, 16, 56, 13]"
+    "basins = [1,2,23]"
    ]
   },
   {
@@ -109,7 +115,7 @@
    "source": [
     "gdf_cmf_riv = gpd.read_file(join(cmf_root, 'nextxy.geojson'))\n",
     "gdf_cmf_riv.head()\n",
-    "c, r = gdf_cmf_riv['x'].values-1, gdf_cmf_riv['y'].values-1\n",
+    "c, r = gdf_cmf_riv['col'].values-1, gdf_cmf_riv['row'].values-1\n",
     "gdf_cmf_riv['basin'] = ds_cmf['basin'].values[r, c]\n",
     "gdf_cmf_riv = gdf_cmf_riv[np.isin(gdf_cmf_riv['basin'], basins)]\n",
     "gdf_cmf_riv = gdf_cmf_riv.to_crs(ds_sfx.raster.crs)"
@@ -268,18 +274,19 @@
     "extent = np.array(gdf_region.buffer(1000).total_bounds)[[0, 2, 1, 3]]\n",
     "ax1.set_extent(extent, crs=utm)\n",
     "cs = da_dep.plot(ax=ax1, cmap=cmap, norm=norm, zorder=2, add_colorbar=True, cbar_kwargs=dict(shrink=0.5, anchor=(0,0.1)))\n",
-    "gdf_bnd.plot(ax=ax1, marker=\"^\", markersize=75, c=\"w\", edgecolor=\"k\", label='waterlevel bound', zorder=4)\n",
+    "gdf_bnd.plot(ax=ax1, marker=\"^\", markersize=75, c=\"w\", edgecolor=\"k\", label='waterlevel bound.', zorder=4)\n",
     "for label, grow in gdf_bnd.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'H{label}', xy=(x, y), **ann_kwargs)\n",
-    "gdf_src.plot(ax=ax1, marker=\">\", markersize=75, c=\"w\", edgecolor=\"k\", label='discharge bound', zorder=4)\n",
+    "gdf_src.plot(ax=ax1, marker=\">\", markersize=75, c=\"w\", edgecolor=\"k\", label='discharge bound.', zorder=4)\n",
     "for label, grow in gdf_src.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'Q{label}', xy=(x, y), **ann_kwargs)\n",
-    "gdf_pnts.plot(ax=ax1, marker='o', markersize=75, c=\"w\", edgecolor=\"k\", label='model obs. point', zorder=4)\n",
-    "for label, grow in gdf_pnts.iterrows():\n",
+    "gdf_points.plot(ax=ax1, marker='o', markersize=25, c=\"b\", edgecolor=\"b\", label='model obs. point', zorder=4)\n",
+    "for label, grow in gdf_points.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
-    "    ax1.annotate(f'O{label}', xy=(x, y), **ann_kwargs)\n",
+    "    ax1.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
+    "gdf_riv.boundary.plot(ax=ax1, ls='--', lw=0.5, color='k', alpha=0.5, label='rivers')\n",
     "    \n",
     "# towns\n",
     "gdf.plot(ax=ax1, marker='.', markersize=40, color=\"k\", label='towns / cities', zorder=4)\n",
@@ -305,7 +312,7 @@
     "    frameon=True,\n",
     ")\n",
     "ax1.add_artist(ScaleBar(1, location='lower right', box_alpha=0.0))\n",
-    "ax1.set_title('b) nested SFINCS model')\n",
+    "ax1.set_title('b) SFINCS model domain')\n",
     "\n",
     "#\n",
     "fig.subplots_adjust(wspace=0.04)\n",
