--- a/2_code/4_analyze_plot/43_validate_floodmaps.ipynb
+++ b/2_code/4_analyze_plot/43_validate_floodmaps.ipynb
@@ -10,7 +10,7 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "from os.path import join, basename\n",
-    "\n",
+    "import pandas as pd\n",
     "# local script skill.py\n",
     "from skill import skill"
    ]
@@ -23,6 +23,7 @@
    "source": [
     "events = {'idai': '20190320', 'eloise':'20210125'}\n",
     "ddir = r'../../1_data/3_eo_rapid'\n",
+    "fdir = r'../../4_results'\n",
     "mdir = r'../../3_models/SFINCS'\n",
     "mdir1 = r'../../3_models/CMF'\n",
     "hmin=0.25\n"
@@ -55,14 +56,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "postfix = '_100m'\n",
     "for event, date in events.items():\n",
-    "    da_obs = hydromt.open_raster(join(roots[postfix], 'gis', f'flooding_{date}.tif'))\n",
-    "    da_sim = xr.open_dataarray(join(mdir, f'flddph_{event}{postfix}.nc')).raster.flipud()\n",
-    "    \n",
-    "    da_skill, da_cm = skill(da_sim, da_obs, msk[postfix], hmin=hmin)\n",
-    "    df_skill = da_skill.reset_coords(drop=True).to_dataframe()\n",
-    "    df_skill.to_csv(join(mdir, f'flddph_{event}{postfix}_skill_hmin{hmin}.csv'))\n",
+    "    dfs = []\n",
+    "    for postfix in ['_100m', '_50m']:\n",
+    "        da_obs = hydromt.open_raster(join(roots[postfix], 'gis', f'flooding_{date}.tif'))\n",
+    "        da_sim = xr.open_dataarray(join(mdir, f'flddph_{event}{postfix}.nc')).raster.flipud()\n",
+    "        da_skill, da_cm = skill(da_sim, da_obs, msk[postfix], hmin=hmin)\n",
+    "        df_skill = da_skill.reset_coords(drop=True).to_dataframe()\n",
+    "        dfs.append(df_skill)\n",
+    "    df_skill = pd.concat(dfs, axis=0, ignore_index=False)\n",
+    "    df_skill.to_csv(join(mdir, f'flddph_{event}_skill_hmin{hmin}.csv'))\n",
     "    print(df_skill)\n",
     "    # break"
    ]
@@ -91,11 +94,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plot\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "from matplotlib import colors, patheffects\n",
     "import cartopy.crs as ccrs\n",
-    "from string import ascii_lowercase\n",
+    "from string import ascii_lowercase as abcd\n",
     "\n",
     "cm_dict = {\n",
     "    1: ('false neg.', '#dd8452'),\n",
@@ -107,6 +111,20 @@
     "ticklabs = [v[0] for k,v in cm_dict.items()]\n",
     "cmap, norm = mpl.colors.from_levels_and_colors(levels, colors)\n",
     "ticks = np.array(levels[:-1])+np.diff(levels)/2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "dep_mask = hydromt.open_raster(join(mdir, '01_rivpowlaw', 'gis', 'dep.tif'))==-9999\n",
+    "riv_mask = hydromt.open_raster(join(mdir, '01_rivpowlaw', 'gis', 'rivmsk.tif'))\n",
+    "riv_mask.raster.set_nodata(0)\n",
+    "gdf_riv = riv_mask.where(~dep_mask, 0).raster.vectorize()\n",
+    "gdf_towns = gpd.read_file(r'../../1_data/towns.geojson').set_index('index').to_crs(gdf_riv.crs)"
    ]
   },
   {
@@ -157,11 +175,9 @@
     ")\n",
     "\n",
     "fig, axs = plt.subplots(\n",
-    "    nrows=2, figsize=(10,15),\n",
-    "#     nrows=1, figsize=(10,8),\n",
-    "    ncols=2,\n",
+    "    figsize=(9,12),\n",
+    "    nrows=2, ncols=2,\n",
     "    subplot_kw={'projection': utm},\n",
-    "    \n",
     "    sharex = True, sharey=True\n",
     ")\n",
     "axs = axs.flatten()\n",
@@ -170,35 +186,38 @@
     "    'cmf': 'CaMa-Flood',\n",
     "}\n",
     "\n",
-    "for row, (event, date) in enumerate(events.items()):\n",
-    "    for col, mod in enumerate(['cmf', 'sfx']):\n",
+    "for col, (event, date) in enumerate(events.items()):\n",
+    "    for row, mod in enumerate(['cmf', 'sfx']):\n",
     "        i = int(row*2 + col)\n",
     "        ax = axs[i]\n",
     "        da_cm = res[mod][date].load()\n",
     "        da_skill = scores[mod][date].load()\n",
     "        hr, csi, fr = da_skill['H'].item(), da_skill['C'].item(), da_skill['F'].item()\n",
     "\n",
+    "        da_cm.raster.set_crs(gdf_riv.crs)\n",
+    "        da_msk.raster.set_crs(gdf_riv.crs)\n",
+    "\n",
     "        da_msk.where(da_msk).plot(ax=ax, cmap='gray', add_colorbar=False, alpha=0.5)\n",
     "        cs = da_cm.where(da_cm>0).plot(ax=ax, cmap=cmap, norm=norm, add_colorbar=False)\n",
-    "# TODO add POI\n",
-    "#         if row == 0:\n",
-    "#             gdf_pnts.to_crs(da_cm.raster.crs).plot(ax=ax)\n",
-    "#         for label, gdf_row in gdf_pnts.to_crs(da_cm.raster.crs).iterrows():\n",
-    "#             x, y = gdf_row.geometry.x, gdf_row.geometry.y\n",
-    "# #             ax.plot(x, y, color='k', marker='o')\n",
-    "#             ax.annotate(label, xy=(x, y), **ann_kwargs)\n",
+    "        # context\n",
+    "        # gdf_riv.boundary.plot(ax=ax, ls='--', lw=0.5, color='k', alpha=0.5)\n",
+    "        # gdf_towns.plot(ax=ax, marker='.', markersize=20, color=\"k\", label='towns / cities', zorder=4)\n",
+    "        for label, grow in gdf_towns.iterrows():\n",
+    "            x, y = grow.geometry.x, grow.geometry.y\n",
+    "            ax.plot(x,y, '.k', markersize=4)\n",
+    "            ax.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
+    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes)\n",
     "            \n",
     "        ax.yaxis.set_visible(True)\n",
     "        ax.xaxis.set_visible(True)\n",
-    "        ax.text(0.82, 0.88, f'C: {csi:.2f}\\nH: {hr:.2f}\\nF: {fr:.2f}', transform=ax.transAxes, bbox=props)\n",
+    "        ax.text(0.8, 0.88, f'C: {csi:.2f}\\nH: {hr:.2f}\\nF: {fr:.2f}', transform=ax.transAxes, bbox=props)\n",
     "\n",
     "        if col == 0:\n",
     "            ax.set_ylabel(f\"y coordinate UTM zone {utm_zone} [m]\")\n",
     "        else:\n",
     "            ax.set_ylabel('')\n",
     "        \n",
-    "        l = ascii_lowercase[i]\n",
-    "        ax.set_title(f'{l}) {d[mod]} - {event} ({date})')\n",
+    "        ax.set_title(f'{d[mod]} - {event} ({date})')\n",
     "        if i >= len(axs)-2:\n",
     "            ax.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")   \n",
     "        else:\n",
@@ -215,7 +234,7 @@
     "cbar=fig.colorbar(cs, cax=cbar_ax, orientation='vertical', ticks=ticks)\n",
     "cbar_ax.set_yticklabels(ticklabs)\n",
     "\n",
-    "plt.savefig(join(f'obs_vs_sim_hmin25_100m.png'), dpi=500, bbox_inches=\"tight\")"
+    "plt.savefig(join(fdir, f'validation_hmin25_100m.png'), dpi=500, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -223,7 +242,159 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "fig, axs = plt.subplots(\n",
+    "    figsize=(9,12),\n",
+    "    nrows=2, ncols=2,\n",
+    "    subplot_kw={'projection': utm},\n",
+    "    sharex = True, sharey=True\n",
+    ")\n",
+    "axs = axs.flatten()\n",
+    "\n",
+    "for col, (event, date) in enumerate(events.items()):\n",
+    "    for row, mod in enumerate(['cmf', 'sfx']):\n",
+    "        i = int(row*2 + col)\n",
+    "        ax = axs[i]\n",
+    "        da_cm = res[mod][date].load()\n",
+    "        da_skill = scores[mod][date].load()\n",
+    "        hr, csi, fr = da_skill['H'].item(), da_skill['C'].item(), da_skill['F'].item()\n",
+    "\n",
+    "        da_cm.raster.set_crs(gdf_riv.crs)\n",
+    "        da_msk.raster.set_crs(gdf_riv.crs)\n",
+    "\n",
+    "        da_msk.where(da_msk).plot(ax=ax, cmap='gray', add_colorbar=False, alpha=0.5)\n",
+    "        cs = da_cm.where(da_cm>0).plot(ax=ax, cmap=cmap, norm=norm, add_colorbar=False)\n",
+    "        # context\n",
+    "        # gdf_riv.boundary.plot(ax=ax, ls='--', lw=0.5, color='k', alpha=0.5)\n",
+    "        # gdf_towns.plot(ax=ax, marker='.', markersize=20, color=\"k\", label='towns / cities', zorder=4)\n",
+    "        for label, grow in gdf_towns.iterrows():\n",
+    "            x, y = grow.geometry.x, grow.geometry.y\n",
+    "            ax.plot(x,y, '.k', markersize=4)\n",
+    "            ax.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
+    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes)\n",
+    "            \n",
+    "        ax.yaxis.set_visible(True)\n",
+    "        ax.xaxis.set_visible(True)\n",
+    "        ax.text(0.8, 0.88, f'C: {csi:.2f}\\nH: {hr:.2f}\\nF: {fr:.2f}', transform=ax.transAxes, bbox=props)\n",
+    "\n",
+    "        if col == 0:\n",
+    "            ax.set_ylabel(f\"y coordinate UTM zone {utm_zone} [m]\")\n",
+    "        else:\n",
+    "            ax.set_ylabel('')\n",
+    "        \n",
+    "        ax.set_title(f'{d[mod]} - {event} ({date})')\n",
+    "        if i >= len(axs)-2:\n",
+    "            ax.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")   \n",
+    "        else:\n",
+    "            ax.set_xlabel('')\n",
+    "            \n",
+    "ax.set_xticks(ax.get_xticks()[::2])\n",
+    "ax.set_extent(extent, crs=utm)\n",
+    "fig.subplots_adjust(wspace=0.05, hspace=0.06)\n",
+    "\n",
+    "# # Add a colorbar axis at the bottom of the graph\n",
+    "cbar_ax = fig.add_axes([0.93, 0.33, 0.015, 0.3])\n",
+    "\n",
+    "# # Draw the colorbar\n",
+    "cbar=fig.colorbar(cs, cax=cbar_ax, orientation='vertical', ticks=ticks)\n",
+    "cbar_ax.set_yticklabels(ticklabs)\n",
+    "\n",
+    "# plt.savefig(join(fdir, f'validation_hmin25_100m.png'), dpi=500, bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## sensitivity analysis\n",
+    "\n",
+    "## barplots\n",
+    "## TODO different rows per event (to scale x axis)\n",
+    "import pandas as pd\n",
+    "cmf_rm = {\n",
+    "    '01_powlaw_06min': '5. spatial res: 6 arcmin',\n",
+    "    # '09_rivpowlaw_lnd0.05': '3. land: manning=0.05 m.s$^{-1/3}$',\n",
+    "    # '06_rivpowlaw_hc0.5': '2c. river: a=0.50, b=0.30',\n",
+    "    '03_powlaw_hp35_03min': '2b. river: a=0.27, b=0.35',\n",
+    "    '02_powlaw_hp25_03min': '2a. river: a=0.27, b=0.25',\n",
+    "    '01_powlaw_03min': '1. default',\n",
+    "}\n",
+    "sfx_rm = {\n",
+    "    '01_rivpowlaw_qh': '4b. forcing: no precip.',\n",
+    "    '01_rivpowlaw_glofas': '4a. forcing: GLOFAS Q',\n",
+    "    '09_rivpowlaw_lnd0.05': '3. land: manning=0.05 m.s$^{-1/3}$',\n",
+    "    # '03_rivgvf': '2d. river: grad. varying flow',\n",
+    "    '06_rivpowlaw_hc0.5': '2c. river: a=0.50, b=0.30',\n",
+    "    '05_rivpowlaw_hp0.35': '2b. river: a=0.27, b=0.35',\n",
+    "    '04_rivpowlaw_hp0.25': '2a. river: a=0.27, b=0.25',\n",
+    "    '01_rivpowlaw': '1. default',\n",
+    "}\n",
+    "\n",
+    "sfx_skill, cmf_skill = {}, {}\n",
+    "for event in events:\n",
+    "    df = pd.read_csv(join(mdir, f'flddph_{event}_skill_hmin{hmin}.csv'), index_col=0)\n",
+    "    sfx_skill[event] = df.loc[sfx_rm.keys()].rename(sfx_rm)\n",
+    "    df= pd.read_csv(join(mdir1, f'flddph_{event}_skill_hmin{hmin}.csv'), index_col=0)\n",
+    "    cmf_skill[event] = df.loc[cmf_rm.keys()].rename(cmf_rm)\n",
+    "\n",
+    "\n",
+    "fig, axs = plt.subplots(2,3, figsize=(15,10), sharey=True)\n",
+    "colors=['darkblue', 'cornflowerblue', 'darkgreen', 'tab:green']\n",
+    "kwargs = dict(color=colors, edgecolor='white', linewidth=1.5, width=0.8, legend=False, zorder=4)\n",
+    "xlims = [\n",
+    "    [[0.60, 0.76], [0.65, 0.91], [0.00,0.21]],\n",
+    "    [[0.25, 0.51], [0.35, 0.85], [0.25,0.51]],\n",
+    "]\n",
+    "\n",
+    "\n",
+    "for row, event in enumerate(events):\n",
+    "    csi = pd.concat([\n",
+    "        sfx_skill[event]['C'].rename(f'SFINCS'), \n",
+    "        cmf_skill[event]['C'].rename(f'CaMa-Flood'),\n",
+    "    ], axis=1).sort_index()\n",
+    "    fr = pd.concat([\n",
+    "        sfx_skill[event]['F'].rename(f'SFINCS'), \n",
+    "        cmf_skill[event]['F'].rename(f'CaMa-Flood'),\n",
+    "    ], axis=1).sort_index()\n",
+    "    hr = pd.concat([\n",
+    "        sfx_skill[event]['H'].rename(f'SFINCS'), \n",
+    "        cmf_skill[event]['H'].rename(f'CaMa-Flood'),\n",
+    "    ], axis=1).sort_index()\n",
+    "\n",
+    "    csi.plot.barh(ax=axs[row, 0], **kwargs)\n",
+    "    hr.plot.barh(ax=axs[row, 1], **kwargs)\n",
+    "    if row == 0:\n",
+    "        fr.plot.barh(ax=axs[row,2], **kwargs).legend(\n",
+    "            bbox_to_anchor=(1.1, 1.1),\n",
+    "            loc=\"upper right\",\n",
+    "            ncol=1,\n",
+    "            fontsize=12\n",
+    "\n",
+    "        )\n",
+    "    else:\n",
+    "        fr.plot.barh(ax=axs[row,2], **kwargs)\n",
+    "        axs[row,2].set_xlabel('false alarm rate [-]', fontsize=12)\n",
+    "        axs[row,1].set_xlabel('hit rate [-]', fontsize=12)\n",
+    "        axs[row,0].set_xlabel('critical succes index [-]', fontsize=12)\n",
+    "\n",
+    "    for i in range(3):\n",
+    "        axs[row,i].grid(axis='x')\n",
+    "        axs[row,i].tick_params(labelsize=10)\n",
+    "        xmin, xmax = xlims[row][i]\n",
+    "        axs[row,i].set_xlim([xmin, xmax])\n",
+    "        axs[row,i].set_xticks(np.arange(xmin, xmax, 0.05))\n",
+    "\n",
+    "    axs[row,1].set_title(event.capitalize(), fontsize=14)\n",
+    "    axs[row,0].set_ylabel('')\n",
+    "    \n",
+    "\n",
+    "# fig.tight_layout()\n",
+    "fig.subplots_adjust(wspace=0.05) \n",
+    "plt.savefig(join(fdir, f'sensitivity.png'), dpi=300, bbox_inches=\"tight\")"
+   ]
   }
  ],
  "metadata": {
